--- a/src/components/CreateTodoButton/CreateTodoButton.css
+++ b/src/components/CreateTodoButton/CreateTodoButton.css
@@ -5,9 +5,6 @@
     align-items: center;
     justify-content: center;
 
-    
-    height: 48px;
-    width: 48px;
     position: fixed;
     bottom: 56px;
 
@@ -33,12 +30,12 @@
     line-height: 24rem;
 
     /* text-align: center; */
-    transform: translateY(-1px);
+    transform: translateY(-1rem);
 
     transition: transform 200ms ease;
 }
 
 .--modal-open span{
-    transform: rotate(45deg) scale(1.1) translateY(-1px);
+    transform: rotate(45deg) scale(1.1) translateY(-1rem);
  
 }
